fix sonarcloud issues